Make a .face picture.

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -64,7 +64,7 @@ label {
 # USER AVATAR
 image {
   monitor =
-  path = $HOME/.config/hypr/1.png
+  path = $HOME/.face
   size = 200
   outline_thickness = 4
   border_color = rgb(fab387)
