Updated kitty config.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,6 +6,21 @@
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
+## Bindings
+
+# Tabs
+map alt+t        new_tab
+map alt+q        close_tab
+map alt+k        next_tab
+map alt+j        previous_tab
+
+# Windows
+map alt+enter         launch
+map alt+w             close_window
+map alt+e             layout_action next_layout
+map alt+shift+k       next_window
+map alt+shift+j       previous_window
+
 # Fonts
 font_family      JetBrains Mono
 bold_font        JetBrains Mono Bold
@@ -17,6 +32,7 @@ font_size 12.0
 enable_audio_bell no
 window_padding_width 10
 confirm_os_window_close 0
+close_on_child_death yes
 background_opacity 0.6
 
 # The basic colors
