--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -124,7 +124,6 @@ general {
 
 decoration {
   rounding = 10
-  # multisample_edges = true
   active_opacity = 1.0
   inactive_opacity = 1.0
 
@@ -133,7 +132,7 @@ decoration {
     size = 6
     passes = 3
     new_optimizations = true
-    xray = true
+    xray = false
     ignore_opacity = true
   }
 
