--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ bind = $modifier, X,        exec, hyprpicker -a
 bind = $modifier, D,        exec, $launcher
 bind = $modifier, Escape,   exec, $powermenu
 bind = $modifier, Return,   exec, $terminal
-bind = $modifier, B,	    exec, zen-browser
+bind = $modifier, B,	    exec, chromium
 bind = $modifier  SHIFT, F, exec, nautilus
 bind = $modifier, E, 	    exec, zeditor --new
 bind = $modifier, M,        exec, amberol
@@ -110,12 +110,10 @@ general {
   border_size = 2
   col.active_border = rgba(e5b9c6ff) rgba(c293a3ff) 45deg
   col.inactive_border = 0xff382D2E
-  no_border_on_floating = false # enable border on float window
+  no_border_on_floating = false
   layout = dwindle
-  # no_cursor_warps = true
-  # cursor_inactive_timeout = 0
-  # no_focus_fallback = false
-  # resize_on_border = false
+  no_focus_fallback = false
+  resize_on_border = false
 }
 
 
@@ -136,7 +134,7 @@ decoration {
     ignore_opacity = true
   }
 
-   layerrule = blur,waybar
+   layerrule = blur, waybar
    layerrule = blur, swaync-control-center
    layerrule = blur, swaync-notification-window
    layerrule = ignorezero, swaync-control-center
@@ -145,22 +143,42 @@ decoration {
    layerrule = ignorealpha 0.5, swaync-notification-window
 }
 
+
 animations {
-  enabled = true
+    # https://cubic-bezier.com/
+    # https://easings.net
+    # https://https://www.cssportal.com/css-cubic-bezier-generator/
 
-  bezier = wind, 0.05, 0.9, 0.1, 1.05
-  bezier = winIn, 0.1, 1.1, 0.1, 1.1
-  bezier = winOut, 0.3, -0.3, 0, 1
-  bezier = liner, 1, 1, 1, 1
+    enabled = true
+    first_launch_animation = true
 
-  animation = windows, 1, 6, wind, slide
-  animation = windowsIn, 1, 6, winIn, slide
-  animation = windowsOut, 1, 5, winOut, slide
-  animation = windowsMove, 1, 5, wind, slide
-  animation = border, 1, 1, liner
-  animation = borderangle, 1, 30, liner, loop
-  animation = fade, 1, 10, default
-  animation = workspaces, 1, 5, wind
+bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = linear, 1, 1, 1, 1
+    bezier = Cubic, 0.1, 0.1, 0.1, 1
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = ease-in-out, 0.17, 0.67, 0.83, 0.67
+    bezier = ease-in, 0.17, 0.67, 0.83, 0.67
+    bezier = ease-out, 0.42, 0, 1, 1
+    bezier = easeInOutSine, 0.37, 0, 0.63, 1
+    bezier = easeInSine, 0.12, 0, 0.39, 0
+    bezier = easeOutSine, 0.61, 1, 0.88, 1
+
+    animation = windowsIn, 1, 3, easeInOutSine, popin
+    animation = windowsOut, 1, 3, easeInOutSine, popin
+
+    animation = border, 1, 3, easeInOutSine
+    animation = borderangle, 1, 30, easeInOutSine, loop
+
+    animation = workspacesIn, 1, 3, easeInOutSine, slidefade
+    animation = workspacesOut, 1, 3, easeInOutSine, slidefade
+
+    animation = specialWorkspaceIn, 1, 3, easeInOutSine, slidevert
+    animation = specialWorkspaceOut, 1, 3, easeInOutSine, slidevert
+
+    animation = layersIn, 1, 3, easeInOutSine, fade
+    animation = layersOut, 1, 3, easeInOutSine, fade
 }
 
 
@@ -208,6 +226,8 @@ env = WLR_NO_HARDWARE_CURSORS,1
 
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = MOZ_ENABLE_WAYLAND,1
+env = OZONE_PLATFORM,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = OZONE_PLATFORM,wayland
 
 
