--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -165,8 +165,9 @@ bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = easeInSine, 0.12, 0, 0.39, 0
     bezier = easeOutSine, 0.61, 1, 0.88, 1
 
-    animation = windowsIn, 1, 3, easeInOutSine, popin
-    animation = windowsOut, 1, 3, easeInOutSine, popin
+    animation = windows,     1, 2, easeInOutSine
+    animation = windowsIn,   1, 3, easeInOutSine, popin
+    animation = windowsOut,  1, 3, easeInOutSine, popin
 
     animation = border, 1, 3, easeInOutSine
     animation = borderangle, 1, 30, easeInOutSine, loop
@@ -228,7 +229,6 @@ env = MOZ_DISABLE_RDD_SANDBOX,1
 env = MOZ_ENABLE_WAYLAND,1
 env = OZONE_PLATFORM,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
-env = OZONE_PLATFORM,wayland
 
 
 # █▀▀ ▀▄▀ █▀▀ █▀▀
@@ -258,8 +258,9 @@ exec-once = gsettings set com.github.stunkymonkey.nautilus-open-any-terminal ter
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-# Opacity
+# Opacity and blur
 windowrulev2 = opacity 0.650 0.65,class:^(EXAMPLE)$ # better to use in-app opacity
+windowrulev2 = noblur, class:^()$, title:^()$
 
 # Position
 windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
@@ -288,7 +289,7 @@ windowrulev2 = move 75 44%,title:^(Volume Control)$
 windowrulev2 = move 75 44%,title:^(Misson Center)$
 
 # Workspace
-windowrulev2 = workspace 1, class:^(EXAMPLE)$
+windowrulev2 = workspace 9, title:^(Amberol)$
 
 # Size
 windowrulev2 = size 600  400,  class:^(download)$
