--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -262,41 +262,24 @@ exec-once = gsettings set com.github.stunkymonkey.nautilus-open-any-terminal ter
 windowrulev2 = opacity 0.650 0.65,class:^(EXAMPLE)$ # better to use in-app opacity
 windowrulev2 = noblur, class:^()$, title:^()$
 
-# Position
-windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = float, class:^(pavucontrol)$
-windowrulev2 = float, title:^(Media viewer)$
-windowrulev2 = float, title:^(Volume Control)$
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = float, class:^(Viewnior)$
-windowrulev2 = float, title:^(DevTools)$
-windowrulev2 = float, class:^(file_progress)$
-windowrulev2 = float, class:^(confirm)$
-windowrulev2 = float, class:^(dialog)$
-windowrulev2 = float, class:^(download)$
-windowrulev2 = float, class:^(notification)$
-windowrulev2 = float, class:^(error)$
-windowrulev2 = float, class:^(confirmreset)$
-windowrulev2 = float, title:^(Open File)$
-windowrulev2 = float, title:^(branchdialog)$
-windowrulev2 = float, title:^(Confirm to replace files)
-windowrulev2 = float, title:^(File Operation Progress)
-windowrulev2 = float, title:^(Mission Center)$
-windowrulev2 = float, title:^(Amberol)$
-
-
-windowrulev2 = move 75 44%,title:^(Volume Control)$
-windowrulev2 = move 75 44%,title:^(Misson Center)$
-
 # Workspace
 windowrulev2 = workspace 9, title:^(Amberol)$
 
+# Position
+windowrulev2 = float, title:^(Open Files)$
+windowrulev2 = float, title:^(Open Folder)$
+windowrulev2 = float, title:^(All Files)$
+windowrulev2 = float, title:^(Volume Control)$
+windowrulev2 = float, title:^(Mission Center)$
+windowrulev2 = float, title:^(Amberol)$
+windowrulev2 = float, title:^(Eye of GNOME)$
+windowrulev2 = move 560 290, title:^(Picture in picture)$
+
 # Size
-windowrulev2 = size 600  400,  class:^(download)$
-windowrulev2 = size 600  400,  title:^(Open File)$
-windowrulev2 = size 600  400,  title:^(Save File)$
-windowrulev2 = size 800  500,  title:^(Volume Control)$
-windowrulev2 = size 1000 600,  title:^(Mission Center)$
+windowrulev2 = size 800  500, title:^(Eye of GNOME)$
+windowrulev2 = size 800  500, title:^(Volume Control)$
+windowrulev2 = size 1000 500, title:^(Mission Center)$
+windowrulev2 = size 900  500, title:^(Picture in picture)$
 
 # xwaylandvideobridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
