Edited hyprland & setup.sh

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ bind = $modifier, Escape,   exec, $powermenu
 bind = $modifier, Return,   exec, $terminal
 bind = $modifier, B,	    exec, chromium
 bind = $modifier  SHIFT, F, exec, nautilus
-bind = $modifier, E, 	    exec, zeditor --new
+bind = $modifier, E, 	    exec, zeditor
 bind = $modifier, M,        exec, amberol
 
 # System keybinds
@@ -170,7 +170,7 @@ bezier = wind, 0.05, 0.9, 0.1, 1.05
     animation = windowsOut,  1, 3, easeInOutSine, popin
 
     animation = border, 1, 3, easeInOutSine
-    animation = borderangle, 1, 30, easeInOutSine, loop
+    animation = borderangle, 1, 3, easeInOutSine, loop
 
     animation = workspacesIn, 1, 3, easeInOutSine, slidefade
     animation = workspacesOut, 1, 3, easeInOutSine, slidefade
@@ -192,7 +192,7 @@ misc {
   mouse_move_enables_dpms = true
   vfr = true
   vrr = 0
-  animate_manual_resizes = true
+  animate_manual_resizes = false
   mouse_move_focuses_monitor = true
   enable_swallow = true
 }
@@ -233,18 +233,24 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # █▀▀ ▀▄▀ █▀▀ █▀▀
 # ██▄ █░█ ██▄ █▄▄
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPHi
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
-exec-once = systemctl --user restart pipewire # Restart pipewire to avoid bugs
-exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
-exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-exec-once = swww-daemon # start the wallpaper daemon
-exec-once = swww img ~/.config/hypr/4.png # wallpaper
-exec-once = waybar # launch the system panel
-exec-once = swaync # start notification demon
-exec-once = nm-applet # system tray for network
-exec-once = blueman-applet # system tray for bluetooth
+
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP     # for XDPH
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP              # for XDPHi
+
+# Background services & daemons
+exec-once = systemctl --user restart pipewire                 # avoid audio bugs
+exec-once = swww-daemon                                       # wallpaper daemon
+exec-once = swww img ~/.config/hypr/4.png                     # set wallpaper
+exec-once = swaync                                            # notifications daemon
+
+# Clipboard history
+exec-once = wl-paste --type text --watch cliphist store       # store text
+exec-once = wl-paste --type image --watch cliphist store      # store images
+
+# Panel and tray apps
+exec-once = waybar                                            # panel/bar
+exec-once = nm-applet                                         # network tray
+exec-once = blueman-applet                                    # bluetooth tray
 
 # I honestly have no idea if this is working or not
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Orchis-Pink-Dark'
@@ -266,9 +272,7 @@ windowrulev2 = noblur, class:^()$, title:^()$
 windowrulev2 = workspace 9, title:^(Amberol)$
 
 # Position
-windowrulev2 = float, title:^(Open Files)$
-windowrulev2 = float, title:^(Open Folder)$
-windowrulev2 = float, title:^(All Files)$
+windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
 windowrulev2 = float, title:^(Amberol)$
@@ -276,8 +280,9 @@ windowrulev2 = float, title:^(Eye of GNOME)$
 windowrulev2 = move 560 290, title:^(Picture in picture)$
 
 # Size
-windowrulev2 = size 800  500, title:^(Eye of GNOME)$
-windowrulev2 = size 800  500, title:^(Volume Control)$
+windowrulev2 = size 900  600, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = size 900  600, title:^(Eye of GNOME)$
+windowrulev2 = size 900  600, title:^(Volume Control)$
 windowrulev2 = size 1000 500, title:^(Mission Center)$
 windowrulev2 = size 900  500, title:^(Picture in picture)$
 
