--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -240,7 +240,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 # Background services & daemons
 exec-once = systemctl --user restart pipewire                 # avoid audio bugs
 exec-once = swww-daemon                                       # wallpaper daemon
-exec-once = swww img ~/.config/hypr/4.png                     # set wallpaper
+exec-once = swww img ~/.config/hypr/wallpaper_1.png           # set wallpaper
 exec-once = swaync                                            # notifications daemon
 
 # Clipboard history
@@ -264,14 +264,15 @@ exec-once = gsettings set com.github.stunkymonkey.nautilus-open-any-terminal ter
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-# Opacity and blur
-windowrulev2 = opacity 0.650 0.65,class:^(EXAMPLE)$ # better to use in-app opacity
-windowrulev2 = noblur, class:^()$, title:^()$
+# Misc
+windowrulev2 = opacity 0.650 0.65,class:^(EXAMPLE)$     # better to use in-app opacity
+windowrulev2 = noblur, class:^()$, title:^()$           # Disable weird blurring for chromium
 
 # Workspace
 windowrulev2 = workspace 9, title:^(Amberol)$
 
 # Position
+windowrulev2 = float, center, title:(Open File|Open|Save As|Export|Import|Choose File|Rename), class:^(.*)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
@@ -310,5 +311,5 @@ input {
   # natural_scroll = true
 }
 
-monitor = HDMI-A-1, 4096x2160@60, 0x0, 1.6 # My tv
-monitor = DP-1, 1920x1080@180, 0x0, 1 # My main monitor
+monitor = HDMI-A-1, 4096x2160@60, 0x0, 1.6  # My tv
+monitor = DP-1, 1920x1080@180, 0x0, 1       # My main monitor
