--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -8,7 +8,7 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = $HOME/.config/hypr/5.jpg
+  path = $HOME/.config/hypr/wallpaper_2.jpg
   blur_passes = 0
   color = rgb(1e1e2e)
 }
@@ -64,7 +64,7 @@ label {
 # USER AVATAR
 image {
   monitor =
-  path = $HOME/.face
+  path = $HOME/
   size = 200
   outline_thickness = 4
   border_color = rgb(fab387)
@@ -84,14 +84,14 @@ input-field {
   outer_color = rgb(fab387)
   inner_color = rgb(1e1e2e)
   font_color = rgb(cdd6f4)
-  fade_on_empty = false
+  fade_on_empty = true
   placeholder_text = <span foreground="##cdd6f4">Logged in as <span foreground="##cba6f7">$USER</span></span>
   hide_input = false
   check_color = rgb(cba6f7)
   fail_color = rgb(f38ba8)
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
   capslock_color = rgb(f9e2af)
-  position = 0, -500
+  position = 0, -45%
   halign = center
   valign = center
 }
