--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -240,7 +240,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 # Background services & daemons
 exec-once = systemctl --user restart pipewire                 # avoid audio bugs
 exec-once = swww-daemon                                       # wallpaper daemon
-exec-once = swww img ~/.config/hypr/wallpaper_1.png           # set wallpaper
+exec-once = swww img ~/.config/wallpapers/wallpaper_1.png     # set wallpaper
 exec-once = swaync                                            # notifications daemon
 
 # Clipboard history
