--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -8,7 +8,7 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = $HOME/.config/hypr/wallpaper_2.jpg
+  path = $HOME/.config/wallpapers/wallpaper_2.jpg
   blur_passes = 0
   color = rgb(1e1e2e)
 }
