New wallpaper script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ bind = $modifier  SHIFT, S,  exec, ~/.config/scripts/screenshot.sh area
 
 # Personal tools/general use
 bind = $modifier, X,        exec, hyprpicker -a
+bind = $modifier, W,        exec, ~/.config/scripts/wallpaper-switch.sh
 bind = $modifier, D,        exec, $launcher
 bind = $modifier, Escape,   exec, $powermenu
 bind = $modifier, Return,   exec, $terminal
@@ -239,7 +240,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 
 # Background services & daemons
 exec-once = systemctl --user restart pipewire                 # avoid audio bugs
-exec-once = swww-daemon                                       # wallpaper daemon
+exec-once = swww-daemon --format xrgb                         # wallpaper daemon
 exec-once = swww img ~/.config/wallpapers/wallpaper_1.png     # set wallpaper
 exec-once = swaync                                            # notifications daemon
 
