--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -136,6 +136,8 @@ decoration {
   }
 
    layerrule = blur, waybar
+   layerrule = ignorezero, waybar
+   layerrule = ignorealpha 0.5, waybar
    layerrule = blur, swaync-control-center
    layerrule = blur, swaync-notification-window
    layerrule = ignorezero, swaync-control-center
@@ -197,6 +199,8 @@ misc {
   mouse_move_focuses_monitor = true
   enable_swallow = true
 }
+
+ecosystem:no_update_news = true
 
 # █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
@@ -273,7 +277,7 @@ windowrulev2 = noblur, class:^()$, title:^()$           # Disable weird blurring
 windowrulev2 = workspace 9, title:^(Amberol)$
 
 # Position
-windowrulev2 = float, center, title:(Open File|Open|Save As|Export|Import|Choose File|Rename), class:^(.*)$
+windowrulev2 = float, center, title:^(Open File|Open|Save|Save As|Export|Import|Choose File), class:^(.*)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
