dynamic lockscreen wallpapers

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -8,9 +8,14 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = $HOME/.config/wallpapers/wallpaper_2.jpg
-  blur_passes = 0
-  color = rgb(1e1e2e)
+  path = $HOME/.cache/current_wallpaper
+  blur_passes = 1
+  blur_size = 2
+  noise = 0.005
+  contrast = 0.92
+  brightness = 0.9
+  vibrancy = 0.08
+  vibrancy_darkness = 0.02
 }
 
 # LAYOUT
@@ -61,37 +66,25 @@ label {
   valign = "center";
 }
 
-# USER AVATAR
-image {
-  monitor =
-  path = $HOME/
-  size = 200
-  outline_thickness = 4
-  border_color = rgb(fab387)
-  position = 0, -350
-  halign = center
-  valign = center
-}
-
 # INPUT FIELD
 input-field {
   monitor =
-  size = 400, 60
+  size = 400,60
   outline_thickness = 4
   dots_size = 0.3
   dots_spacing = 0.2
   dots_center = true
-  outer_color = rgb(fab387)
-  inner_color = rgb(1e1e2e)
-  font_color = rgb(cdd6f4)
+  outer_color = rgb(44,44,44)
+  inner_color = rgb(36,36,36)
+  font_color = rgb(242,189,205)
   fade_on_empty = true
-  placeholder_text = <span foreground="##cdd6f4">Logged in as <span foreground="##cba6f7">$USER</span></span>
+  placeholder_text = <span foreground="##cdd6f4">Logged in as <span foreground="##ffc0cb">$USER</span></span>
   hide_input = false
-  check_color = rgb(cba6f7)
-  fail_color = rgb(f38ba8)
+  check_color = rgb(163,71,209)
+  fail_color = rgb(187,7,36)
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-  capslock_color = rgb(f9e2af)
-  position = 0, -45%
+  capslock_color = rgb(153,50,204)
+  position = 0,-20%
   halign = center
   valign = center
 }
