--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ bind = $modifier  SHIFT, S,  exec, ~/.config/scripts/screenshot.sh area
 # Personal tools/general use
 bind = $modifier, X,        exec, hyprpicker -a
 bind = $modifier, W,        exec, ~/.config/scripts/wallpaper-switch.sh
+bind = $modifier  SHIFT, W, exec, ~/.config/rofi/wallpaper/wallpaper-selector.sh
 bind = $modifier, D,        exec, $launcher
 bind = $modifier, Escape,   exec, $powermenu
 bind = $modifier, Return,   exec, $terminal
