New music player

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ bind = $modifier, Return,   exec, $terminal
 bind = $modifier, B,	    exec, chromium
 bind = $modifier  SHIFT, F, exec, nautilus
 bind = $modifier, E, 	    exec, zeditor
-bind = $modifier, M,        exec, amberol
+bind = $modifier, M,        exec, g4music
 
 # System keybinds
 bind = $modifier, Q,        killactive,
@@ -275,14 +275,14 @@ windowrulev2 = opacity 0.650 0.65,class:^(EXAMPLE)$     # better to use in-app o
 windowrulev2 = noblur, class:^()$, title:^()$           # Disable weird blurring for chromium
 
 # Workspace
-windowrulev2 = workspace 9, title:^(Amberol)$
+windowrulev2 = workspace 9, class:^(com.github.neithern.g4music)$
 
 # Position
 windowrulev2 = float, center, title:^(Open File|Open|Save|Save As|Export|Import|Choose File), class:^(.*)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
-windowrulev2 = float, title:^(Amberol)$
+windowrulev2 = float, class:^(com.github.neithern.g4music)$
 windowrulev2 = float, title:^(Eye of GNOME)$
 windowrulev2 = move 560 290, title:^(Picture in picture)$
 
