--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -283,12 +283,12 @@ windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
 windowrulev2 = float, class:^(com.github.neithern.g4music)$
-windowrulev2 = float, title:^(Eye of GNOME)$
+windowrulev2 = float, title:^(Viewnior)$
 windowrulev2 = move 560 290, title:^(Picture in picture)$
 
 # Size
 windowrulev2 = size 900  600, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = size 900  600, title:^(Eye of GNOME)$
+windowrulev2 = size 900  600, title:^(Viewnior)$
 windowrulev2 = size 900  600, title:^(Volume Control)$
 windowrulev2 = size 1000 600, title:^(Mission Center)$
 windowrulev2 = size 900  500, title:^(Picture in picture)$
