--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ bind = $modifier  SHIFT, S,  exec, ~/.config/scripts/screenshot.sh area
 
 # Personal tools/general use
 bind = $modifier, X,        exec, hyprpicker -a
-bind = $modifier, W,        exec, ~/.config/scripts/switch-wallpapers.sh
+bind = $modifier, W,        exec, ~/.config/scripts/switch-wallpaper.sh
 bind = $modifier  SHIFT, W, exec, ~/.config/rofi/wallpaper/wallpaper-selector.sh
 bind = $modifier, D,        exec, $launcher
 bind = $modifier, Escape,   exec, $powermenu
@@ -283,12 +283,14 @@ windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
 windowrulev2 = float, class:^(com.github.neithern.g4music)$
-windowrulev2 = float, title:^(Viewnior)$
+windowrulev2 = float, class:^(viewnior)$
+windowrulev2 = float, title:^(Image Properties)$
 windowrulev2 = move 560 290, title:^(Picture in picture)$
 
 # Size
 windowrulev2 = size 900  600, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = size 900  600, title:^(Viewnior)$
+windowrulev2 = size 900  600, class:^(viewnior)$
+windowrulev2 = size 300  200, title:^(Image Properties)$
 windowrulev2 = size 900  600, title:^(Volume Control)$
 windowrulev2 = size 1000 600, title:^(Mission Center)$
 windowrulev2 = size 900  500, title:^(Picture in picture)$
