New packages and tweaks

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ bind = $modifier, Return,   exec, $terminal
 bind = $modifier, B,	    exec, chromium
 bind = $modifier  SHIFT, F, exec, nautilus
 bind = $modifier, E, 	    exec, zeditor
+bind = $modifier, V,	    exec, vesktop
 bind = $modifier, M,        exec, g4music
 
 # System keybinds
@@ -242,11 +243,12 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP     # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP              # for XDPHi
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1                            # polkit agent
 
 # Background services & daemons
 exec-once = systemctl --user restart pipewire                 # avoid audio bugs
 exec-once = swww-daemon --format xrgb                         # wallpaper daemon
-exec-once = swww img ~/.config/wallpapers/wallpaper_01.png    # set wallpaper
+exec-once = swww img ~/.config/wallpapers/wallpaper_1.png     # set wallpaper
 exec-once = swaync                                            # notifications daemon
 
 # Clipboard history
@@ -278,8 +280,9 @@ windowrulev2 = noblur, class:^()$, title:^()$           # Disable weird blurring
 windowrulev2 = workspace 9, class:^(com.github.neithern.g4music)$
 
 # Position
-windowrulev2 = float, center, title:^(Open File|Open|Save|Save As|Export|Import|Choose File), class:^(.*)$
+windowrulev2 = float, center, title:^(Open Files|Open|Save File |Save As|Export|Import|Choose File), class:^(.*)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float, class:^(electron37)$
 windowrulev2 = float, title:^(Volume Control)$
 windowrulev2 = float, title:^(Mission Center)$
 windowrulev2 = float, class:^(com.github.neithern.g4music)$
@@ -288,9 +291,11 @@ windowrulev2 = float, title:^(Image Properties)$
 windowrulev2 = move 560 290, title:^(Picture in picture)$
 
 # Size
-windowrulev2 = size 900  600, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = size 900  600, class:^(viewnior)$
-windowrulev2 = size 300  200, title:^(Image Properties)$
+windowrulev2 = size 800  600, title:^(Open Files|Open|Save File|Save As|Export|Import|Choose File), class:^(.*)$
+windowrulev2 = size 800  600, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = size 800  600, class:^(electron37)$
+windowrulev2 = size 100  100, title:^(Image Properties)$
+windowrulev2 = size 800  600, class:^(viewnior)$
 windowrulev2 = size 900  600, title:^(Volume Control)$
 windowrulev2 = size 1000 600, title:^(Mission Center)$
 windowrulev2 = size 900  500, title:^(Picture in picture)$
