--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,12 +13,12 @@ bind = $modifier  SHIFT, S,  exec, ~/.config/scripts/screenshot.sh area
 
 # Personal tools/general use
 bind = $modifier, X,        exec, hyprpicker -a
-bind = $modifier, W,        exec, ~/.config/scripts/switch-wallpaper.sh
+bind = $modifier, W,        exec, ~/.config/scripts/switch-wallpapers.sh
 bind = $modifier  SHIFT, W, exec, ~/.config/rofi/wallpaper/wallpaper-selector.sh
 bind = $modifier, D,        exec, $launcher
 bind = $modifier, Escape,   exec, $powermenu
 bind = $modifier, Return,   exec, $terminal
-bind = $modifier, B,	    exec, chromium
+bind = $modifier, B,	    exec, chromium --enable-features=UseOzonePlatform,WaylandWindowDecorations --ozone-platform-hint=wayland
 bind = $modifier  SHIFT, F, exec, nautilus
 bind = $modifier, E, 	    exec, zeditor
 bind = $modifier, V,	    exec, vesktop
@@ -280,7 +280,7 @@ windowrulev2 = noblur, class:^()$, title:^()$           # Disable weird blurring
 windowrulev2 = workspace 9, class:^(com.github.neithern.g4music)$
 
 # Position
-windowrulev2 = float, center, title:^(Open Files|Open|Save File |Save As|Export|Import|Choose File), class:^(.*)$
+windowrulev2 = float, center, title:^(Open Files|Open|Save File |Save As|Export|Import|Choose File|Open a Torrent), class:^(.*)$
 windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(electron37)$
 windowrulev2 = float, title:^(Volume Control)$
@@ -291,7 +291,7 @@ windowrulev2 = float, title:^(Image Properties)$
 windowrulev2 = move 560 290, title:^(Picture in picture)$
 
 # Size
-windowrulev2 = size 800  600, title:^(Open Files|Open|Save File|Save As|Export|Import|Choose File), class:^(.*)$
+windowrulev2 = size 800  600, title:^(Open Files|Open|Save File|Save As|Export|Import|Choose File|Open a Torrent), class:^(.*)$
 windowrulev2 = size 800  600, class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = size 800  600, class:^(electron37)$
 windowrulev2 = size 100  100, title:^(Image Properties)$
