--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -111,7 +111,7 @@ general {
   gaps_in = 5
   gaps_out = 8
   border_size = 2
-  col.active_border = rgba(e5b9c6ff) rgba(c293a3ff) 45deg
+  col.active_border = rgba(e5b9c6ff)
   col.inactive_border = 0xff382D2E
   no_border_on_floating = false
   layout = dwindle
@@ -140,12 +140,6 @@ decoration {
    layerrule = blur, waybar
    layerrule = ignorezero, waybar
    layerrule = ignorealpha 0.5, waybar
-   layerrule = blur, swaync-control-center
-   layerrule = blur, swaync-notification-window
-   layerrule = ignorezero, swaync-control-center
-   layerrule = ignorezero, swaync-notification-window
-   layerrule = ignorealpha 0.5, swaync-control-center
-   layerrule = ignorealpha 0.5, swaync-notification-window
 }
 
 
@@ -248,8 +242,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1           
 # Background services & daemons
 exec-once = systemctl --user restart pipewire                 # avoid audio bugs
 exec-once = swww-daemon --format xrgb                         # wallpaper daemon
-exec-once = swww img ~/.config/wallpapers/wallpaper_1.png     # set wallpaper
-exec-once = swaync                                            # notifications daemon
+exec-once = mako                                              # notifications daemon
 
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store       # store text
