--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,90 +1,60 @@
-$font = JetBrainsMono Nerd Font
+$font     = JetBrainsMono Nerd Font
 
-# GENERAL
 general {
-  hide_cursor = true
+  hide_cursor         = true
 }
 
-# BACKGROUND
 background {
-  monitor =
-  path = $HOME/.cache/current_wallpaper
-  blur_passes = 1
-  blur_size = 2
-  noise = 0.005
-  contrast = 0.92
-  brightness = 0.9
-  vibrancy = 0.08
-  vibrancy_darkness = 0.02
+  monitor             =
+  path                = $HOME/.cache/current_wallpaper
+  blur_passes         = 1
+  blur_size           = 2
+  noise               = 0.005
+  contrast            = 0.92
+  brightness          = 0.9
+  vibrancy            = 0.08
+  vibrancy_darkness   = 0.02
 }
 
-# LAYOUT
-label {
-  monitor =
-  text = Layout: $LAYOUT
-  color = rgb(cdd6f4)
-  font_size = 25
-  font_family = $font
-  position = 30, -30
-  halign = left
-  valign = top
-}
-
-# TIME
-label {
-  monitor =
-  text = $TIME
-  color = rgb(cdd6f4)
-  font_size = 90
-  font_family = $font
-  position = -30, 0
-  halign = right
-  valign = top
-}
-
-# DATE
-label {
-  monitor =
-  text = cmd[update:43200000] date +"%A, %d %B %Y"
-  color = rgb(cdd6f4)
-  font_size = 25
-  font_family = $font
-  position = -30, -150
-  halign = right
-  valign = top
-}
-
-# FINGERPRINT
-{
-  monitor = "";
-  text = "$FPRINTPROMPT";
-  color = "rgb(cdd6f4)";
-  font_size = 14;
-  font_family = font;
-  position = "0, -107";
-  halign = "center";
-  valign = "center";
-}
-
-# INPUT FIELD
 input-field {
-  monitor =
-  size = 400,60
-  outline_thickness = 4
-  dots_size = 0.3
-  dots_spacing = 0.2
-  dots_center = true
-  outer_color = rgb(44,44,44)
-  inner_color = rgb(36,36,36)
-  font_color = rgb(242,189,205)
-  fade_on_empty = true
-  placeholder_text = <span foreground="##cdd6f4">Logged in as <span foreground="##ffc0cb">$USER</span></span>
-  hide_input = false
-  check_color = rgb(163,71,209)
-  fail_color = rgb(187,7,36)
-  fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-  capslock_color = rgb(153,50,204)
-  position = 0,-20%
-  halign = center
-  valign = center
+  monitor           =
+  size              = 220, 40
+  outline_thickness = 3
+  dots_size         = 0.3
+  dots_spacing      = 0.35
+  dots_center       = true
+  outer_color       = rgb(f48fb1)
+  inner_color       = rgb(263238)
+  font_color        = rgb(f48fb1)
+  fade_on_empty     = true
+  check_color       = rgb(f48fb1)
+  placeholder_text  = <span foreground="##cdd6f4">Logged in as <span foreground="##ffc0cb">$USER</span></span>
+  hide_input        = false
+  position          = 0, -170
+  halign            = center
+  valign            = center
+}
+
+# Date Label
+label {
+  monitor      =
+  text         = cmd[update:1000] date +"%A, %d %B"
+  color        = rgb(f48fb1)
+  font_size    = 22
+  font_family  = $font
+  position     = 0, 60
+  halign       = center
+  valign       = bottom
+}
+
+# Time Label
+label {
+  monitor      =
+  text         = $TIME
+  color        = rgb(f48fb1)
+  font_size    = 60
+  font_family  = $font
+  position     = 0, -400
+  halign       = center
+  valign       = center
 }
