Slight tweak of hypr config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,10 +56,6 @@ bind = $modifier CTRL, down,  resizeactive, 0 20
 bind = $modifier, g,   togglegroup
 bind = $modifier, tab, changegroupactive
 
-bind = $modifier, a,        togglespecialworkspace
-bind = $modifier  SHIFT, a, movetoworkspace, special
-bind = $modifier, c, exec,  hyprctl dispatch centerwindow
-
 bind = $modifier, 1,   workspace, 1
 bind = $modifier, 2,   workspace, 2
 bind = $modifier, 3,   workspace, 3
@@ -257,7 +253,7 @@ exec-once = blueman-applet                                    # bluetooth tray
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Orchis-Pink-Dark'
 exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
 exec-once = gsettings set org.gnome.desktop.interface font-name 'JetBrainsMono Nerd Font 11'
-exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'rose-pine-hyprcursor'
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'rose-pine-cursor'
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 exec-once = gsettings set com.github.stunkymonkey.nautilus-open-any-terminal terminal $terminal
 
@@ -270,6 +266,8 @@ windowrulev2 = opacity 0.650 0.65,class:^(EXAMPLE)$     # better to use in-app o
 windowrulev2 = noblur, class:^()$, title:^()$           # Disable weird blurring for chromium
 
 # Workspace
+windowrulev2 = workspace 2, class:^(dev.zed.Zed)$
+windowrulev2 = workspace 3, class:^(steam)$
 windowrulev2 = workspace 9, class:^(com.github.neithern.g4music)$
 
 # Position
