--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@
 ## Bindings
 
 # Tabs
-map alt+t        new_tab
+map alt+n        new_tab
 map alt+q        close_tab
 map alt+k        next_tab
 map alt+j        previous_tab
@@ -22,13 +22,13 @@ map alt+shift+k       next_window
 map alt+shift+j       previous_window
 
 # Fonts
-font_family      JetBrains Mono
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      JetBrainsMono Nerd
+bold_font        JetBrainsMono Nerd Bold
+italic_font      JetBrainsMono Nerd Italic
+bold_italic_font JetBrainsMono Nerd Bold Italic
 font_size 12.0
 
-# Femtanyl is goated
+# Misc
 enable_audio_bell no
 window_padding_width 10
 confirm_os_window_close 0
