--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -236,9 +236,9 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1                            # polkit agent
 
 # Background services & daemons
-exec-once = systemctl --user restart pipewire                 # avoid audio bugs
-exec-once = swww-daemon --format xrgb                         # wallpaper daemon
-exec-once = mako                                              # notifications daemon
+exec-once = systemctl --user restart pipewire                                                # avoid audio bugs
+exec-once = swww-daemon img ~/.cache/current_wallpaper --format xrgb                         # wallpaper daemon
+exec-once = mako                                                                             # notifications daemon
 
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store       # store text
