--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,10 +22,10 @@ map alt+shift+k       next_window
 map alt+shift+j       previous_window
 
 # Fonts
-font_family      JetBrainsMono Nerd
-bold_font        JetBrainsMono Nerd Bold
-italic_font      JetBrainsMono Nerd Italic
-bold_italic_font JetBrainsMono Nerd Bold Italic
+font_family      family="JetBrainsMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 font_size 12.0
 
 # Misc
