Removed gsetting (I don't believe it did anything)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -236,9 +236,9 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1                            # polkit agent
 
 # Background services & daemons
-exec-once = systemctl --user restart pipewire                                                # avoid audio bugs
-exec-once = swww-daemon img ~/.cache/current_wallpaper --format xrgb                         # wallpaper daemon
-exec-once = mako                                                                             # notifications daemon
+exec-once = systemctl --user restart pipewire                 # avoid audio bugs
+exec-once = swww-daemon --format xrgb                         # wallpaper daemon
+exec-once = mako                                              # notifications daemon
 
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store       # store text
@@ -249,12 +249,7 @@ exec-once = waybar                                            # panel/bar
 exec-once = nm-applet                                         # network tray
 exec-once = blueman-applet                                    # bluetooth tray
 
-# I honestly have no idea if this is working or not
-exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Orchis-Pink-Dark'
-exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
-exec-once = gsettings set org.gnome.desktop.interface font-name 'JetBrainsMono Nerd Font 11'
-exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'rose-pine-cursor'
-exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
+# Set our terminal for nautilus
 exec-once = gsettings set com.github.stunkymonkey.nautilus-open-any-terminal terminal $terminal
 
 
