trying smth out

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -237,7 +237,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1           
 
 # Background services & daemons
 exec-once = systemctl --user restart pipewire                 # avoid audio bugs
-exec-once = swww-daemon --format xrgb                         # wallpaper daemon
+exec-once = swww-daemon & swww img ~/.cache/current_wallpaper # wallpaper daemon
 exec-once = mako                                              # notifications daemon
 
 # Clipboard history
@@ -249,7 +249,12 @@ exec-once = waybar                                            # panel/bar
 exec-once = nm-applet                                         # network tray
 exec-once = blueman-applet                                    # bluetooth tray
 
-# Set our terminal for nautilus
+# Set our gsetting themes and envs
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Orchis-Pink-Dark'
+exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
+exec-once = gsettings set org.gnome.desktop.interface font-name 'JetBrainsMono Nerd Font 11'
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'rose-pine-cursor'
+exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 exec-once = gsettings set com.github.stunkymonkey.nautilus-open-any-terminal terminal $terminal
 
 
