--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -213,13 +213,15 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 env = SDL_VIDEODRIVER,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = WLR_NO_HARDWARE_CURSORS,1
+env = WLR_DRM_NO_ATOMIC,1
+env = WLR_RENDERER_ALLOW_SOFTWARE,1
 
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = MOZ_ENABLE_WAYLAND,1
