--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,6 +1,6 @@
 [Appearance]
 color_scheme_path=/usr/share/color-schemes/Kvantum.colors
-custom_palette=true
+custom_palette=false
 icon_theme=Papirus-Dark
 standard_dialogs=gtk3
 style=kvantum-dark
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x90\0\0\0\0\0\0\0\0\xff\xff\xff\xfe\xff\xff\xff\xfe\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x90)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x9a\0\0\0\0\0\0\0\0\0\0\x3\xae\0\0\x1\xf6\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x2\x9a)
 
 [Troubleshooting]
 force_raster_widgets=1
