Forget some stuff, anyways, added music presence and removed discord mpris thingy

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -249,6 +249,7 @@ exec-once = wl-paste --type image --watch cliphist store        # store images
 exec-once = waybar                                              # panel/bar
 exec-once = nm-applet                                           # network tray
 exec-once = blueman-applet                                      # bluetooth tray
+exec-once = QT_QPA_PLATFORM=xcb musicpresence                   # Music Presence
 
 # Set our gsetting themes and envs
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Orchis-Pink-Dark'
